* Small generalized optimization by using augmented assignements (in-place operators) where possible (#2274, @Avasam)
* General speed and size improvements due to all the removed code. (#2046, #1986, #2050, #1950, #2085, #2087, #2051, #1990, #2106, #2127, #2124, #2126, #2177, #2218, #2202, #2205, #2217)

### adodbapi
* Remove references to outdated IronPython (#2049, @Avasam)
  This removes the following public names:
  * `adodbapi.adodbapi.onWin32`
  * `adodbapi.apibase.onIronPython`
  * `adodbapi.apibase.NullTypes`
  * `adodbapi.apibase.DateTime`
* Remove references to outdated `mxDateTime` (#2048, @Avasam)
  This removes the following public names:
  * `adodbapi.apibase.mxDateTime`
  * `adodbapi.apibase.mxDateTimeConverter`
* Removed obsolete Python 2 aliases (#2088, @Avasam)
  This removes the following public names:
  * `adodbapi.adodbapi.unicodeType`
  * `adodbapi.adodbapi.longType`
  * `adodbapi.adodbapi.StringTypes`
  * `adodbapi.adodbapi.maxint`
  * `adodbapi.apibase.unicodeType`
  * `adodbapi.apibase.longType`
  * `adodbapi.apibase.StringTypes`
  * `adodbapi.apibase.makeByteBuffer`
  * `adodbapi.apibase.memoryViewType`
* Remove outdated and unused remote feature (#2098, @Avasam)
* Migrated from `distutils` to `setuptools` (#2133, @Avasam)

Build 306, released 2023-03-26
------------------------------
* Add GetSystemPowerStatus (#2010, @CristiFati)

* Add CascadeWindows (#1999, @CristiFati)

* Add win32gui.ResetDC

* Fix leak in win32pdh.GetFormattedCounterArray

* Fix IIS on later python versions (#2025)

* Fix for service registration code updated in build 305 (#1985)

* Support for Python 3.6 was dropped, support for later versions was improved.

Build 305, released 2022-11-06
------------------------------
* Installation .exe files were deprecated.

* @kxrob put a lot of work towards removing use of the deprecated Unicode
  API so we can build on Python 3.12. This should be largely invisible, but
  please report any unintended consequences.
